--- a/hw1/style.css
+++ b/hw1/style.css
@@ -59,7 +59,7 @@ html,body{
     transform:translate(-100%,0);
     /*background-image:url(quiet.png);
     background-repeat:no-repeat;*/
-   
+    transition: all 0.05s ease;
     
 }
 .google-meet__me-lb{
@@ -137,7 +137,7 @@ html,body{
     width:47%;
     height:30%;
     margin:0.1em;
-    margin-top:0.3em;
+    margin-top:0.5em;
     padding:0.1em;
     background-color: rgb(60,64,67);
     border-radius: 8%;
